<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidDomInspection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="60">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/imagen1">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="40"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_jugar">

        </Button>

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_perfil">

        </Button>

        <Button
            android:id="@+id/btn_config"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_ajustes">

        </Button>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_acerda_de">

        </Button>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/txt_cerrar">

        </Button>

    </LinearLayout>

</LinearLayout>






